linked pages(about, contact, fellow members, gal.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/index.html"
+              <a class="nav-link active" aria-current="page" href="index.html"
                 >Home</a
               >
             </li>
@@ -62,10 +62,10 @@
                 class="dropdown-menu dropdown-menu-dark"
                 aria-labelledby="navbarDarkDropdownMenuLink"
               >
-                <li><a class="dropdown-item" href="#">Gallery</a></li>
+                <li><a class="dropdown-item" href="gallery.html">Gallery</a></li>
                 <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="#">About Us</a></li>
-                <li><a class="dropdown-item" href="#">Fellow Members</a></li>
+                <li><a class="dropdown-item" href="about.html">About Us</a></li>
+                <li><a class="dropdown-item" href="fellowMembers.html">Fellow Members</a></li>
                 <li><a class="dropdown-item" href="#">Teams</a></li>
                 <li><a class="dropdown-item" href="#">Contact</a></li>
               </ul>
@@ -151,7 +151,7 @@
           >
             <img src="logo.png" alt="logo" width="40" height="34" />
           </a>
-          <span class="text-muted">
+          <span class="text-muted ">
             &copy; 2021, SRM Institute of Science and Technology, Potheri, SRM
             Nagar, Kattankulathur, Tamil Nadu 603203</span
           >
