linked new event pages

--- a/index.html
+++ b/index.html
@@ -66,8 +66,6 @@
                 <li><hr class="dropdown-divider" /></li>
                 <li><a class="dropdown-item" href="about.html">About Us</a></li>
                 <li><a class="dropdown-item" href="fellowMembers.html">Fellow Members</a></li>
-                <li><a class="dropdown-item" href="#">Teams</a></li>
-                <li><a class="dropdown-item" href="#">Contact</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
@@ -85,18 +83,23 @@
                 class="dropdown-menu dropdown-menu-dark"
                 aria-labelledby="navbarDarkDropdownMenuLink"
               >
-                <li><a class="dropdown-item" href="#">STEM programme</a></li>
+                <li><a class="dropdown-item" href="eventStem.html">STEM programme</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="#"
+                  <a class="dropdown-item" href="eventEnt.html"
                     >Engineering & Technology Education</a
                   >
                 </li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="#">Polytechnic Students</a>
+                  <a class="dropdown-item" href="eventPolytech.html">Polytechnic Students</a>
                 </li>
               </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="research.html"
+                >Research</a
+              >
             </li>
           </ul>
         </div>
@@ -121,7 +124,7 @@
           ><i
             >Xilinx NEXUS is an innovative programme of SRMIST from the grants
             received from Xilinx, Inc., focused on the funding of Women in
-            Technology (WIT) programs within the university setting.</i
+            Technology (WIT) programmes within the university setting.</i
           ></h7
         >
         <br />
