changed navbar, and content to card

--- a/about.html
+++ b/about.html
@@ -54,9 +54,7 @@
                 <li><a class="dropdown-item" href="gallery.html">Gallery</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li><a class="dropdown-item" href="about.html">About Us</a></li>
-                <li><a class="dropdown-item" href="#">Fellow Members</a></li>
-                <li><a class="dropdown-item" href="#">Teams</a></li>
-                <li><a class="dropdown-item" href="#">Contact</a></li>
+                <li><a class="dropdown-item" href="fellowMembers.html">Fellow Members</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
@@ -74,25 +72,31 @@
                 class="dropdown-menu dropdown-menu-dark"
                 aria-labelledby="navbarDarkDropdownMenuLink"
               >
-                <li><a class="dropdown-item" href="#">STEM programme</a></li>
+                <li><a class="dropdown-item" href="eventStem.html">STEM programme</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="#"
+                  <a class="dropdown-item" href="eventEnt.html"
                     >Engineering & Technology Education</a
                   >
                 </li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="#">Polytechnic Students</a>
+                  <a class="dropdown-item" href="eventPolytech.html">Polytechnic Students</a>
                 </li>
               </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="research.html"
+                >Research</a
+              >
             </li>
           </ul>
         </div>
       </div>
     </nav>
-<div style="text-align: center; padding:100px 100px 100px 100px;"class="">
-  <p >
+    <div class="card text-white bg-dark mb-3 mx-auto  text-center" style="max-width: 70rem;">
+        <div class="card-body">
+           <p >
     <h1><u>About</u></h1>
   </p>
   <br />
@@ -131,7 +135,8 @@
       <br />
       <li><h4>Steer girl students in the direction of the research and development for the benefit of women folk.</h4></li>
     </ul>
-</div>
+        </div>
+      </div>
 </body>
 <div class="container">
   <footer
