--- a/gallery.html
+++ b/gallery.html
@@ -54,9 +54,7 @@
                 <li><a class="dropdown-item" href="gallery.html">Gallery</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li><a class="dropdown-item" href="about.html">About Us</a></li>
-                <li><a class="dropdown-item" href="#">Fellow Members</a></li>
-                <li><a class="dropdown-item" href="#">Teams</a></li>
-                <li><a class="dropdown-item" href="#">Contact</a></li>
+                <li><a class="dropdown-item" href="fellowMembers.html">Fellow Members</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
@@ -74,18 +72,23 @@
                 class="dropdown-menu dropdown-menu-dark"
                 aria-labelledby="navbarDarkDropdownMenuLink"
               >
-                <li><a class="dropdown-item" href="#">STEM programme</a></li>
+                <li><a class="dropdown-item" href="eventStem.html">STEM programme</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="#"
+                  <a class="dropdown-item" href="eventEnt.html"
                     >Engineering & Technology Education</a
                   >
                 </li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="#">Polytechnic Students</a>
+                  <a class="dropdown-item" href="eventPolytech.html">Polytechnic Students</a>
                 </li>
               </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="research.html"
+                >Research</a
+              >
             </li>
           </ul>
         </div>
