--- a/gallery.html
+++ b/gallery.html
@@ -1,21 +1,32 @@
-<html lang="en" dir="ltr">
-<link rel="stylesheet" href="css/styles.css">
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>xilinxNexus</title>
+    <link rel="icon" href="favicon.ico" />
 
-  <title>gallery</title>
-  <link rel="icon" href="favicon.ico" />
-<!-- bootstrap_css -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- bootstrap_css -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
 
-<!-- bootstrap_js -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</head>
-  <body class="bg-dark text-white" >
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <!-- bootstrap_js -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">
+        <a class="navbar-brand" href="index.html">
           <img src="logo.png" alt="logo" width="40" height="34" />
         </a>
         <button
@@ -30,7 +41,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="index.html"
                 >Home</a
@@ -45,31 +56,10 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                Menu
-              </a>
-              <ul
-                class="dropdown-menu dropdown-menu-dark"
-                aria-labelledby="navbarDarkDropdownMenuLink"
-              >
-                <li><a class="dropdown-item" href="gallery.html">Gallery</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="about.html">About Us</a></li>
-                <li><a class="dropdown-item" href="fellowMembers.html">Fellow Members</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdownMenuLink"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
                 Events
               </a>
               <ul
-                class="dropdown-menu dropdown-menu-dark"
+                class="dropdown-menu dropdown-menu-lg-end dropdown-menu-white"
                 aria-labelledby="navbarDarkDropdownMenuLink"
               >
                 <li><a class="dropdown-item" href="eventStem.html">STEM programme</a></li>
@@ -86,6 +76,11 @@
               </ul>
             </li>
             <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="gallery.html"
+                >Gallery</a
+              >
+            </li>
+            <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="research.html"
                 >Research</a
               >
@@ -95,8 +90,7 @@
       </div>
     </nav>
 
-    <p >
-      <h1  style="text-align: center; ">Gallery</h1>
+    <h1  style="text-align: center; ">Gallery</h1>
 
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators" >
@@ -124,31 +118,33 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+
+    <!-- foooter       -->
+    <div class="container">
+      <footer
+        class="
+          d-flex
+          flex-wrap
+          justify-content-between
+          align-items-center
+          py-3
+          my-4
+          border-top
+        "
+      >
+        <div class="d-flex align-items-center">
+          <a
+            href="index.html"
+            class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1"
+          >
+            <img src="logo.png" alt="logo" width="40" height="34" />
+          </a>
+          <span class="text-muted ">
+            &copy; 2021, SRM Institute of Science and Technology, Potheri, SRM
+            Nagar, Kattankulathur, Tamil Nadu 603203</span
+          >
+        </div>
+      </footer>
+    </div>
   </body>
-  <div class="container">
-    <footer
-      class="
-        d-flex
-        flex-wrap
-        justify-content-between
-        align-items-center
-        py-3
-        my-4
-        border-top
-      "
-    >
-      <div class="d-flex align-items-center">
-        <a
-          href="/index.html"
-          class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1"
-        >
-          <img src="logo.png" alt="logo" width="40" height="34" />
-        </a>
-        <span class="text-muted ">
-          &copy; 2021, SRM Institute of Science and Technology, Potheri, SRM
-          Nagar, Kattankulathur, Tamil Nadu 603203</span
-        >
-      </div>
-    </footer>
-  </div>
 </html>
