--- a/index.html
+++ b/index.html
@@ -130,20 +130,24 @@
             <!-- Three columns of text below the carousel -->
   <div class="row">
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+        <svg class="bd-placeholder-img rounded-circle" width="0" height="0">
+        <img src="fellowimg/malarvizhii.jpg" alt="">
+        </svg>
 
         <h5 class="pb-3">Dr. S. Malarvizhi</h5>
         <p>Professor of ECE.</p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
+        <svg class="bd-placeholder-img rounded-circle" width="0" height="50">
+          <img src="fellowimg/revathi.jpg" alt="">
+          </svg>
         <h5 class="pb-3">Dr. Revathi Venkatraman </h5>
         <p>Chairperson of School of Computing .</p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
+        <svg class="bd-placeholder-img rounded-circle" width="0" height="50">
+          <img src="fellowimg/shantanu.jpg" alt="">
+          </svg>
         <h5 class="pb-3">Dr. Shanthanu Patil </h5>
         <p>Head of Department of Translational-Medicine-And-Research and  Associate Director, Innovation, Incubation & Entrepreneurship Center SRM IST.</p>
       </div><!-- /.col-lg-4 -->
