--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-          <img src="logo.png" alt="logo" width="40" height="34" />
+          <img src="logo.png" alt="logo" width="200" height="70" />
         </a>
         <button
           class="navbar-toggler"
@@ -125,7 +125,7 @@
         <h5 class="card-title border-0">Fellow Members</h5>
         <br> 
         <div class="card mb-3 border-0 mx-auto>
-          <img src="..." class="card-img-top" alt="...">
+          <img src="fellowimg/malarvizhii.png" class="card-img-top" alt="...">
           <div class="card-body">
             <!-- Three columns of text below the carousel -->
   <div class="row">
@@ -141,6 +141,7 @@
         <svg class="bd-placeholder-img rounded-circle" width="0" height="50">
           <img src="fellowimg/revathi.jpg" alt="">
           </svg>
+
         <h5 class="pb-3">Dr. Revathi Venkatraman </h5>
         <p>Chairperson of School of Computing .</p>
       </div><!-- /.col-lg-4 -->
@@ -148,6 +149,7 @@
         <svg class="bd-placeholder-img rounded-circle" width="0" height="50">
           <img src="fellowimg/shantanu.jpg" alt="">
           </svg>
+
         <h5 class="pb-3">Dr. Shanthanu Patil </h5>
         <p>Head of Department of Translational-Medicine-And-Research and  Associate Director, Innovation, Incubation & Entrepreneurship Center SRM IST.</p>
       </div><!-- /.col-lg-4 -->
@@ -208,7 +210,7 @@
             href="index.html"
             class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1"
           >
-            <img src="logo.png" alt="logo" width="40" height="34" />
+            <img src="logo.png" alt="logo" width="200" height="70" />
           </a>
           <span class="text-muted ">
             &copy; 2021, SRM Institute of Science and Technology, Potheri, SRM
