added electronics event

--- a/eventElectronics.html
+++ b/eventElectronics.html
@@ -72,10 +72,11 @@
                 <li><hr class="dropdown-divider" /></li>
                 <li>
                   <a class="dropdown-item" href="eventPolytech.html">Polytechnic Students</a>
-                  <li><hr class="dropdown-divider" /></li>
-                  <li>
-                    <a class="dropdown-item" href="eventElectronics.html">Towards Electronics graduates career</a>
-                  </li>
+                </li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="eventElectronics.html">Towards Electronics graduates career</a>
+                </li>
               </ul>
             </li>
             <li class="nav-item">
@@ -93,33 +94,18 @@
       </div>
     </nav>
 
-    <h1  style="text-align: center; ">Gallery</h1>
-
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-indicators" >
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  <!-- Main Card -->
+<div class="card mb-3 mx-auto  text-center" style="max-width: 70rem;">
+  <div class="card-body">
+     
+    <img src="placement-activity-page.jpg" alt="" height="300" width="500">
+    <h5 class="card-title"></h5>
+    <br>
+    <p>“Towards Electronics graduates" - Career Opportunities in VLSI and Embedded industry was organized in two slots through Zoom platform on January 21st 1.30 to 3.00 pm and January 22nd 4.00 to 5.00 pm for the Third year Students of ECE department, SRMIST, KTR
+        Mr. Arun John Mathias, and Mr. Pronadeep Bora, CoreEL Technologies interacted with the students. About 200 students attended the event.  Mr. John Mathias, explained the career opportunities and openings, certificate courses available in the field of VLSI and Embedded. He also answered the questions raised by the students. Mr. Pronadeep Bora demonstrated the working of various hardware boards from Xilinx and explained about their specific features. </p>
+    <br>
+    
   </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="images/image1.jpeg" class="d-block w-100 px-4" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="images/image1.jpeg" class="d-block w-100 px-4" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="images/image1.jpeg" class="d-block w-100 px-4" alt="...">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
 </div>
 
     <!-- foooter       -->
