--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="/index.html">
-          <img src="logo.png" alt="logo" width="200" height="70" />
+          <img src="logo (2).jpg" alt="logo" width="200" height="100" />
         </a>
         <button
           class="navbar-toggler"
@@ -82,6 +82,10 @@
                 <li><hr class="dropdown-divider" /></li>
                 <li>
                   <a class="dropdown-item" href="eventPolytech.html">Polytechnic Students</a>
+                </li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="eventElectronics.html">Towards Electronics graduates career</a>
                 </li>
               </ul>
             </li>
