--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
                 <li>
                   <a class="dropdown-item" href="eventPolytech.html">Polytechnic Students</a>
                 </li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="eventElectronics.html">Towards Electronics graduates career</a>
+                </li>
               </ul>
             </li>
             <li class="nav-item">
