--- a/research.html
+++ b/research.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-          <img src="logo.png" alt="logo" width="200" height="70" />
+          <img src="logo (2).jpg" alt="logo" width="200" height="100" />
         </a>
         <button
           class="navbar-toggler"
@@ -72,6 +72,10 @@
                 <li><hr class="dropdown-divider" /></li>
                 <li>
                   <a class="dropdown-item" href="eventPolytech.html">Polytechnic Students</a>
+                </li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="eventElectronics.html">Towards Electronics graduates career</a>
                 </li>
               </ul>
             </li>
