corrected bottom logo

--- a/fellowMembers.html
+++ b/fellowMembers.html
@@ -149,7 +149,7 @@
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
       <div class="d-flex align-items-center">
         <a href="/index.html" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-            <img src="logo.png" alt="logo" width="200" height="70">
+            <img src="logo (2).jpg" alt="logo" width="200" height="100">
         </a>
         <span class="text-muted"> &copy; 2022, SRM Institute of Science and Technology, Potheri, SRM Nagar, Kattankulathur, Tamil Nadu 603203</span>
       </div>
