--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@
         href="/index.html"
         class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1"
       >
-        <img src="logo.png" alt="logo" width="200" height="70" />
+        <img src="logo (2).jpg" alt="logo" width="200" height="100" />
       </a>
       <span class="text-muted ">
         &copy; 2022, SRM Institute of Science and Technology, Potheri, SRM
