--- a/gallery.html
+++ b/gallery.html
@@ -90,7 +90,7 @@
       </div>
     </nav>
 
-  <div class="card mb-3 mx-auto  text-center" style="max-width: 70rem;">
+  <div class="card mb-3 mx-auto  text-center border-success border-3" style="max-width: 70rem;">
     
     <h1  style="text-align: center; ">Gallery</h1>
 
