--- a/research.html
+++ b/research.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-          <img src="logo (2).jpg" alt="logo" width="200" height="100" />
+          <img src="logo.png" alt="logo" width="200" height="70" />
         </a>
         <button
           class="navbar-toggler"
@@ -72,10 +72,6 @@
                 <li><hr class="dropdown-divider" /></li>
                 <li>
                   <a class="dropdown-item" href="eventPolytech.html">Polytechnic Students</a>
-                </li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="eventElectronics.html">Towards Electronics graduates career</a>
                 </li>
               </ul>
             </li>
@@ -134,7 +130,7 @@
             href="index.html"
             class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1"
           >
-            <img src="logo (2).jpg" alt="logo" width="200" height="100" />
+            <img src="logo.png" alt="logo" width="200" height="70" />
           </a>
           <span class="text-muted ">
             &copy; 2022, SRM Institute of Science and Technology, Potheri, SRM
