--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
+  <body style="background-color:#FFF6EA;">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" >
+      <div class="container-fluid" style="background-color:#dcd1c5; margin:-.5rem; ">
         <a class="navbar-brand" href="index.html">
           <img src="logo.png" alt="logo" width="200" height="70" />
         </a>
@@ -94,6 +94,8 @@
     <div
       class="card bg-white mb-3 mx-auto text-center border-0"
       style="max-width: 27rem"
+      FFEEEE
+      
     >
       <div class="card-body">
         <br />
@@ -150,7 +152,7 @@
           <img src="fellowimg/shantanu.jpg" alt="">
           </svg>
 
-        <h5 class="pb-3">Dr. Shanthanu Patil </h5>
+        <h5 class="pb-3">Dr. Shantanu Patil </h5>
         <p>Head of Department of Translational-Medicine-And-Research and  Associate Director, Innovation, Incubation & Entrepreneurship Center SRM IST.</p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
