eventEnt_eventPoytech_career-talk

--- a/eventEnt.html
+++ b/eventEnt.html
@@ -91,7 +91,29 @@
     </nav>
 
     <!-- Main Card -->
-<div class="card  mb-3 mx-auto  text-center" style="max-width: 70rem;">
+<div class="card  mb-3 mx-auto " style="max-width: 70rem;">
+  
+  <div class="card border-success">
+    <div class="card-body">
+      <h5 class="card-title">Activity</h5>
+      <p class="card-text"><b>An event on “Towards Electronics graduates.</b>
+        <br>
+        <br>
+        <br>
+        -	January 21st 1.30 to 3.00 pm and January 22nd 4.00 to 5.00 pm
+        <br>
+        -	Career Opportunities in VLSI and Embedded industry was organized in two slots through Zoom platform.
+        <br>
+        -	Third year Students of ECE department, SRMIST, KTR in association with placement cell of the department.
+        <br>
+        <br>
+        <br>
+        Mr. Arun John Mathias, and Mr. Pronadeep Bora, CoreEL Technologies with the students. About 200 students attended the event.  Dr. S. Malarvizhi presented the welcome address and introduced the guest to the participants. Mr. John Mathias, started the session with an presentation on introduction to VLSI and Embedded systems and explained the career opportunities and openings, certificate courses available in the field of VLSI and Embedded. He also answered the questions raised by the students. Mr. Pronadeep Bora demonstrated the working of various hardware boards from Xilinx and explained about their specific features. 
+      </div>
+      
+  
+  </div>
+
   <div class="card-body">
      
     <h5 class="card-title">Design flow using Xilinx tools ( hardware and software)</h5>
