Update:Nav,footer + Reports: >> iframe

--- a/index.html
+++ b/index.html
@@ -75,6 +75,33 @@
                 </li>
               </ul>
             </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdownMenuLink"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Reports
+              </a>
+              <ul
+                class="dropdown-menu dropdown-menu-lg-end dropdown-menu-white"
+                aria-labelledby="navbarDarkDropdownMenuLink"
+              >
+                <li><a class="dropdown-item" href="quarter1.html">First Quarter</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="quarter2.html">Second Quarter</a
+                  >
+                </li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="quarter3.html">Third Quarter</a>
+                </li>
+              </ul>
+            </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="gallery.html"
                 >Gallery</a
@@ -215,7 +242,7 @@
             <img src="logo.png" alt="logo" width="200" height="70" />
           </a>
           <span class="text-muted ">
-            &copy; 2022, SRM Institute of Science and Technology, Potheri, SRM
+            &copy; 2023, SRM Institute of Science and Technology, Potheri, SRM
             Nagar, Kattankulathur, Tamil Nadu 603203</span
           >
         </div>
