--- a/eventEnt.html
+++ b/eventEnt.html
@@ -24,8 +24,8 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" >
+      <div class="container-fluid" style="background-color:#dcd1c5; margin:-.5rem; ">
         <a class="navbar-brand" href="index.html">
           <img src="logo.png" alt="logo" width="200" height="70" />
         </a>
@@ -72,6 +72,33 @@
                 <li><hr class="dropdown-divider" /></li>
                 <li>
                   <a class="dropdown-item" href="eventPolytech.html">Polytechnic Students</a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdownMenuLink"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Reports
+              </a>
+              <ul
+                class="dropdown-menu dropdown-menu-lg-end dropdown-menu-white"
+                aria-labelledby="navbarDarkDropdownMenuLink"
+              >
+                <li><a class="dropdown-item" href="quarter1.html">First Quarter</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="quarter2.html">Second Quarter</a
+                  >
+                </li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="quarter3.html">Third Quarter</a>
                 </li>
               </ul>
             </li>
@@ -201,7 +228,7 @@
             <img src="logo.png" alt="logo" width="200" height="70" />
           </a>
           <span class="text-muted ">
-            &copy; 2022, SRM Institute of Science and Technology, Potheri, SRM
+            &copy; 2023, SRM Institute of Science and Technology, Potheri, SRM
             Nagar, Kattankulathur, Tamil Nadu 603203</span
           >
         </div>
