--- a/quarter1.html
+++ b/quarter1.html
@@ -124,7 +124,7 @@
     <h5 class="card-title">Web App Development</h5>
     <br>
     
-    <iframe src="/xilinxSRM/reports/First Quarter report.pdf" width="1020" height="700" style="border: none"></iframe>
+    <iframe src="/xilinxSRM/reports/First Quarter report.pdf" width="100%" height="700" style="border: none"></iframe>
     </div>
 </div>
 
